--- a/Neo4j-airplane.ipynb
+++ b/Neo4j-airplane.ipynb
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2867df4a",
+   "id": "ec4fe7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3ae3aaf9",
+   "id": "3f0f9443",
    "metadata": {
     "scrolled": true
    },
@@ -867,7 +867,8 @@
    "source": [
     "#sentence node\n",
     "for i in range(len(df_new)):\n",
-    "    q12 = 'create (z:sentence{date:\"' +str(df_new['Date'][i]) + '\", operator:\"' + str(df_new['Airlane'][i]) + '\", nr_flight:\"' +str(df_new['Flight_number'][i])+ '\", words:\"' +  str(df_new['Last_words'][i])+ '\"})'\n",
+    "    q12 = 'create (z:sentence{date:\"' +str(df_new['Date'][i]) + '\", operator:\"' + str(df_new['Airlane'][i]) + \n",
+    "    '\", nr_flight:\"' +str(df_new['Flight_number'][i])+ '\", words:\"' +  str(df_new['Last_words'][i])+ '\"})'\n",
     "    session.run(q12)"
    ]
   },
@@ -910,7 +911,8 @@
    ],
    "source": [
     "#query showing on which route the most people died in total\n",
-    "q14 = 'MATCH (l:flight) with l match (l) <- [:VICTIMS] - (z:died) return l.route as route, z.fatalities_passangers + z.fatalities_crew + z.fatalities_ground as sum order by sum DESC'\n",
+    "q14 = 'MATCH (l:flight) with l match (l) <- [:VICTIMS] - (z:died) return l.route as route, \\\n",
+    "    z.fatalities_passangers + z.fatalities_crew + z.fatalities_ground as sum order by sum DESC'\n",
     "nodes = session.run(q14)\n",
     "for node in nodes:\n",
     "    print(node['route'], int(node['sum']))"
@@ -943,7 +945,8 @@
    ],
    "source": [
     "#the total number of deaths from flights that included Warsaw\n",
-    "q14a = \"MATCH (l:flight) where l.route =~ '.*Warsaw.*' with l match (l) <- [:VICTIMS] - (z:died) return l.route as route, z.fatalities_passangers + z.fatalities_crew + z.fatalities_ground as sum order by sum DESC\"\n",
+    "q14a = \"MATCH (l:flight) where l.route =~ '.*Warsaw.*' with l match (l) <- [:VICTIMS] - (z:died) return l.route as route, \\\n",
+    "    z.fatalities_passangers + z.fatalities_crew + z.fatalities_ground as sum order by sum DESC\"\n",
     "nodes = session.run(q14a)\n",
     "for node in nodes:\n",
     "    print(node['route'], int(node['sum']))"
@@ -1040,7 +1043,8 @@
    ],
    "source": [
     "#how many airplane of a given type belong to the operator\n",
-    "q16a = \"MATCH (o:operator) with o match (o) <- [:BELONGS_TO] - (s:airplane {type:'Douglas DC-3'}) return o.name, count(s) as count_airplane order by count_airplane desc\"\n",
+    "q16a = \"MATCH (o:operator) with o match (o) <- [:BELONGS_TO] - (s:airplane {type:'Douglas DC-3'}) return o.name, \\\n",
+    "    count(s) as count_airplane order by count_airplane desc\"\n",
     "nodes = session.run(q16a)\n",
     "for node in nodes[:10]:\n",
     "    print('operator:', node['o.name'], 'count_airplane:', node['count_airplane'])"
@@ -1073,7 +1077,9 @@
    ],
    "source": [
     "#miejsca wypadkow dla dwoch roznych operatorow\n",
-    "q17 = \"MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'United Airlines' return z.operator, w.place UNION MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'Western Airlines' return z.operator, w.place\" \n",
+    "q17 = \"MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'United Airlines' \\\n",
+    "    return z.operator, w.place UNION MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) \\\n",
+    "    where z.operator = 'Western Airlines' return z.operator, w.place\" \n",
     "nodes = session.run(q17)\n",
     "for node in nodes:\n",
     "    print('operator:', node['z.operator'], 'place:', node['place'])"
@@ -1103,7 +1109,9 @@
     }
    ],
    "source": [
-    "q18 = 'match (z:died) - [:VICTIMS] -> (l:flight) <- [:WERE_FLYING] - (p:aboard) where z.fatalities_passangers + z.fatalities_crew < p.passangers + p.crew and p.passangers + p.crew > 0 and z.fatalities_passangers + z.fatalities_crew > 0 return l, p, z'\n",
+    "q18 = 'match (z:died) - [:VICTIMS] -> (l:flight) <- [:WERE_FLYING] - (p:aboard) where \\\n",
+    "    z.fatalities_passangers + z.fatalities_crew < p.passangers + p.crew and p.passangers + p.crew > 0 \\\n",
+    "    and z.fatalities_passangers + z.fatalities_crew > 0 return l, p, z'\n",
     "nodes = session.run(q18)\n",
     "for node in nodes[:10]:\n",
     "    print(node['l']['route'],  node['p']['passangers'] + node['p']['crew'] - node['z']['fatalities_passangers'] - node['z']['fatalities_crew'])"
@@ -1126,7 +1134,9 @@
     }
    ],
    "source": [
-    "q18a = 'match (z:died) - [:VICTIMS] -> (l:flight) <- [:WERE_FLYING] - (p:aboard) where z.fatalities_crew + z.fatalities_passangers < p.passangers + p.crew and p.passangers + p.crew > 0 and z.fatalities_passangers + z.fatalities_crew > 0 return count(l) as how_many'\n",
+    "q18a = 'match (z:died) - [:VICTIMS] -> (l:flight) <- [:WERE_FLYING] - (p:aboard) where \\\n",
+    "    z.fatalities_crew + z.fatalities_passangers < p.passangers + p.crew and p.passangers + p.crew > 0 \\\n",
+    "    and z.fatalities_passangers + z.fatalities_crew > 0 return count(l) as how_many'\n",
     "nodes = session.run(q18a)\n",
     "for node in nodes:\n",
     "    print(node['how_many'])"
@@ -1222,7 +1232,9 @@
    ],
    "source": [
     "#before index\n",
-    "q22 = \"profile MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'United Airlines' return z.operator, w.place UNION MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'Western Airlines' return z.operator, w.place\"\n",
+    "q22 = \"profile MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where \\\n",
+    "    z.operator = 'United Airlines' return z.operator, w.place UNION MATCH (w:accident) \\\n",
+    "    with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'Western Airlines' return z.operator, w.place\"\n",
     "session.run(q22)"
    ]
   },
@@ -1268,7 +1280,9 @@
    ],
    "source": [
     "#after index\n",
-    "q22 = \"profile MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'United Airlines' return z.operator, w.place UNION MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'Western Airlines' return z.operator, w.place\"\n",
+    "q22 = \"profile MATCH (w:accident) with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where \\\n",
+    "    z.operator = 'United Airlines' return z.operator, w.place UNION MATCH (w:accident) \\\n",
+    "    with w match (w) <- [:WORDS_SPOKEN] - (z:sentence) where z.operator = 'Western Airlines' return z.operator, w.place\"\n",
     "session.run(q22)"
    ]
   },
@@ -1314,7 +1328,8 @@
    ],
    "source": [
     "#procedure\n",
-    "q24 = \"call apoc.custom.asProcedure('passangers_sum','MATCH (l:lot {route: $atr1}) <- [:WERE_FLYING] - (p:aboard) return $atr1, p.crew + p.passangers as passangers_sum', 'read', [['passangers_sum', 'float']],[['atr1', 'string']])\"\n",
+    "q24 = \"call apoc.custom.asProcedure('passangers_sum','MATCH (l:lot {route: $atr1}) <- [:WERE_FLYING] - (p:aboard) \\\n",
+    "    return $atr1, p.crew + p.passangers as passangers_sum', 'read', [['passangers_sum', 'float']],[['atr1', 'string']])\"\n",
     "session.run(q24)"
    ]
   },
